Fixing crash when start the Sources activity [root cause] accessing non initialized varible [solution] Using an observable to initiliaze the variable with default object and tracking the changes to reload the sources

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="dev.dextra.newsapp">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -7,15 +8,18 @@
     <application
         android:name="dev.dextra.newsapp.NewsApplication"
         android:allowBackup="true"
+        android:fullBackupContent="true"
         android:icon="@drawable/ic_worldwide_news"
         android:label="@string/app_name"
         android:roundIcon="@drawable/ic_worldwide_news"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
-        <activity android:name="dev.dextra.newsapp.feature.sources.SourcesActivity"
+        android:theme="@style/AppTheme"
+        tools:ignore="GoogleAppIndexingWarning">
+        <activity
+            android:name=".feature.sources.SourcesActivity"
+            android:configChanges="orientation|screenSize"
             android:label="@string/app_name"
-            android:launchMode="singleTop"
-            android:configChanges="orientation|screenSize">
+            android:launchMode="singleTop">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,13 +27,13 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="dev.dextra.newsapp.feature.news.NewsActivity"
+            android:name=".feature.news.NewsActivity"
+            android:configChanges="orientation|screenSize"
             android:label="@string/title_activity_news"
-            android:parentActivityName="dev.dextra.newsapp.feature.sources.SourcesActivity"
-            android:configChanges="orientation|screenSize">
+            android:parentActivityName=".feature.sources.SourcesActivity">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="dev.dextra.newsapp.feature.sources.SourcesActivity" />
+                android:value=".feature.sources.SourcesActivity" />
         </activity>
     </application>
 
