--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,5 +1,7 @@
 apply plugin: 'com.android.application'
 
+apply from: '../gradle/scripts/quality.gradle'
+
 apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
