--- a/build.gradle
+++ b/build.gradle
@@ -25,6 +25,11 @@ buildscript {
     }
 }
 
+plugins {
+    id "io.gitlab.arturbosch.detekt" version "1.0.0-RC16"
+}
+
+
 allprojects {
     repositories {
         google()
